API: Add transactions endpoints
